// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkTextInput should ignore when placeholder is provided, as element is not focused 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with \`accessoryView\` 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(129, 123, 143, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Name
    </Text>
    <View />
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        testId="arbitrary"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with custom style 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "marginLeft": 10,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with description 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(129, 123, 143, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value="Kel loves orange soda"
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
        Object {
          "color": "rgb(129, 123, 143)",
          "paddingTop": 4,
        },
      ]
    }
  >
    Who loves orange soda?
  </Text>
</View>
`;

exports[`iOS BpkTextInput should render correctly with description, valid=false and a validationMessage 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(255, 84, 82, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(255, 84, 82, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value="Somebody other than Kel loves orange soda"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Object {
                "position": "absolute",
                "right": 6,
              },
              Object {
                "color": "rgb(255, 84, 82)",
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
        Object {
          "color": "rgb(255, 84, 82)",
          "paddingTop": 4,
        },
      ]
    }
  >
    Nope
  </Text>
</View>
`;

exports[`iOS BpkTextInput should render correctly with editable=false 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(230, 228, 235, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with inputRef set 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with valid 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Object {
                "position": "absolute",
                "right": 6,
              },
              Object {
                "color": "rgb(0, 215, 117)",
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with valid false 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(255, 84, 82, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Object {
                "position": "absolute",
                "right": 6,
              },
              Object {
                "color": "rgb(255, 84, 82)",
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`iOS BpkTextInput should render correctly with valid false and a validation message 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(178, 174, 189, 1)",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
          "position": "absolute",
          "top": 21,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(255, 84, 82, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Object {
                "position": "absolute",
                "right": 6,
              },
              Object {
                "color": "rgb(255, 84, 82)",
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
        Object {
          "color": "rgb(255, 84, 82)",
          "paddingTop": 4,
        },
      ]
    }
  >
    Nope
  </Text>
</View>
`;

exports[`iOS BpkTextInput should render correctly with value 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(129, 123, 143, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Name
    </Text>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value="Joe"
      />
    </View>
  </View>
</View>
`;
